fix(spacings): only use bottom spacings

--- a/templates/theme-default/assets/scss/utilities/_u-theme.scss
+++ b/templates/theme-default/assets/scss/utilities/_u-theme.scss
@@ -19,14 +19,3 @@
   background-color: var(--#{$color}-background);
   color: var(--#{$color}-text);
 }
-
-.u-theme--dark > .u-theme--light,
-.u-theme--light > .u-theme--dark {
-  padding-top: var(--#{$spacing}, 0);
-  padding-bottom: var(--#{$spacing}, 0);
-}
-
-.u-theme--dark > .u-theme--light + .u-theme--light,
-.u-theme--light > .u-theme--dark + .u-theme--dark {
-  margin-top: calc(-1 * var(--#{$spacing}, 0));
-}
